--- a/templates/components/update_note.html
+++ b/templates/components/update_note.html
@@ -1,5 +1,5 @@
 <div class="card"> 
-  <form class="updateall" method="POST" action="/return">
+  <form class="updateall" method="POST">
     <input
     class="card-title2"
     id="titulo"
@@ -16,5 +16,6 @@
     ></textarea>
     <button class="updatebtn2">Alterar Get-it</button>
     <input type="hidden" name="id" value="{id}">
+    <input type="hidden" name="selecionar" value="3">
   </form>
 </div>  
